[tool.poetry]
name = "linked-list"
version = "0.1.0"
description = ""
authors = ["declanjryan <25474733+declanjryan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "linked_list"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
